--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
                 <h2>Contato</h2>
 
                 <ul>
-                    <li><a href="carloshrr1209@gmail.com"><img src="gifs/gmail.gif" alt="Icone Gmail"></a></li>
-                    <li><a href="https://www.instagram.com/_carloshenri27"><img src="gifs/instagram.gif" alt="Icone Instagram"></a></li>
-                    <li><a href="http://www.linkedin.com/in/carlos-henrique-790988247"><img src="gifs/linkedin.gif" alt="Icone Linkedin"></a></li>
+                    <li><a href="carloshrr1209@gmail.com" target="_blank"><img src="gifs/gmail.gif" alt="Icone Gmail"></a></li>
+                    <li><a href="https://www.instagram.com/_carloshenri27" target="_blank"><img src="gifs/instagram.gif" alt="Icone Instagram"></a></li>
+                    <li><a href="http://www.linkedin.com/in/carlos-henrique-790988247" target="_blank"><img src="gifs/linkedin.gif" alt="Icone Linkedin"></a></li>
                 </ul>
 
             </div>
