Correção de error ortográficos.

--- a/index.html
+++ b/index.html
@@ -327,17 +327,17 @@
                 <p class="observacoes"><span>Observações Importantes:</span> 
                     <ol>
 
-                        <li>Ideal para: RH, Gestão de Pessoas, Análise Organizacional e Controle de Quadro de Funcionários;</li>
-                    
-                        <li>Formato da Planilha: 
+                        <li><strong>Ideal para:</strong> RH, Gestão de Pessoas, Análise Organizacional e Controle de Quadro de Funcionários;</li>
+                        <br>
+                        <li><strong>📋Formato da Planilha: </strong>
                             <ul>
                                 <li>As duas primeiras colunas DEVEM ser: "Departamento" e "Cargo";</li>
                                 <li>A primeira linha DEVE conter os cabeçalhos das colunas;</li>
                                 <li>Arquivos devem estar no formato .xlsx (Excel).</li>
                             </ul>
                         </li>
-
-                        <li>Processamento de Dados:
+                        <br>
+                        <li><strong>🔄 Processamento de Dados:</strong>
 
                             <ul>
 
@@ -348,8 +348,8 @@
                             </ul>
 
                         </li>
-
-                        <li>Compatibilidade:
+                        <br>
+                        <li><strong>📱 Compatibilidade:</strong>
 
                             <ul>
 
@@ -360,8 +360,8 @@
                             </ul>
 
                         </li>
-
-                        <li>Segurança e Privacidade:
+                        <br>
+                        <li><strong>🔒 Segurança e Privacidade:</strong>
 
                             <ul>
 
@@ -372,8 +372,8 @@
                             </ul>
 
                         </li>
-
-                        <li>Funcionalidades de Navegação
+                        <br>
+                        <li><strong>🎛️Funcionalidades de Navegação</strong>
 
                             <ul>
 
@@ -384,8 +384,8 @@
                             </ul>
 
                         </li>
-
-                        <li>💡 Dica de Uso
+                        <br>
+                        <li><strong>💡 Dica de Uso</strong>
 
                             "Para melhor experiência, organize sua planilha com departamentos e
                              cargos bem definidos nas duas primeiras colunas.As demais colunas 
